--- a/src/styling/functions.css
+++ b/src/styling/functions.css
@@ -1,13 +1,13 @@
 .anchor-link-container {
   animation: nav-icons 0.5s ease-in-out forwards;
   animation-delay: 2.5s;
-  position: absolute;
+  position: fixed;
   text-align: center;
   bottom: 0;
   opacity: 0;
   line-height: 8em;
   height: 6em;
-  width: 100vw;
+  width: 100%;
 }
 
 .anchor-link {  
